--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -34,12 +34,14 @@ attribution ,/n./@归因;,/n./@属性;
 avoirdupois ,/n./@常衡;
 bellybutton ,/n./@肚脐;
 benediction ,/n./@祝福;
+biometrical ,/redirected./@target="biometric";
 blockbuster ,/n./@轰动;,/n./@一鸣惊人者;
 blogosphere ,/n./@博客圈;
 bourgeoisie ,/n./@中产阶级;
 braggadocio ,/n./@自夸;,/n./@吹牛;
 bureaucracy ,/n./@官僚主義;
 calculation ,/n./@计算;
+calibration ,/n./@校準;,/n./@測定;,/n./@標定;,/n./@刻度;
 carnivorous ,/adj./@食肉的;
 categorical ,/adj./@絕對的;,/adj./@明确的;,/adj./@斷言的;
 celebration ,/n./@庆祝;
@@ -192,7 +194,7 @@ handicapped ,/adj./@有殘疾的;
 haughtiness ,/n./@傲慢;
 headquarter ,/n./@總部;,/n./@司令部;
 Hellenistic ,/adj./@希臘文化的;,/adj./@希臘化的;,/adj./@古希臘時期的;
-holographic ,/adj./@全息攝影的;,/adj./@全息技術的;
+holographic ,/adj./@全息攝影的;,/adj./@全息技術的;,/adj./@全息成像的;
 hospitality ,/n./@好客;,/n./@款待;,/n./@殷勤;
 humiliation ,/n./@羞辱;,/n./@蒙羞;
 humiliatory ,/adj./@出丑的;,/adj./@蒙羞的;
@@ -276,7 +278,7 @@ merchandise ,/n./@商品;,/n./@貨物;,/vt./@買賣;,/vt./@經銷;
 metaphysics ,/n./@形而上学;
 methodology ,/n./@方法論;
 microscopic ,/adj./@精微的;,/adj./@微小的;,/adj./@顯微鏡的;,/adj./@只能從顯微鏡裡看到的;
-mindfulness ,/n./@留心;,/n./@察覺;
+mindfulness ,/n./@留心;,/n./@察覺;,/n./@正念;,/n./@注意;,/n./@覺知;
 mischievous ,/adj./@恶意的;,/adj./@惡作劇的;,/adj./@傷害性的;,/adj./@有害的;
 misconstrue ,/vt./@誤會;,/vt./@误解;
 multinomial ,/n./@多項式;,/adj./@多項的;
@@ -341,7 +343,7 @@ progression ,/n./@前進;,/n./@連續;
 progressive ,/adj./@進步的;,/adj./@前進的;
 prohibition ,/n./@禁止;
 promiscuous ,/adj./@混雜的;
-proprietary ,/n./@所有权;,/n./@所有人;,/adj./@私人所有的;,/adj./@专利的;
+proprietary ,/n./@所有权;,/n./@所有人;,/adj./@私人所有的;,/adj./@专利的;,/adj./@私營的;,/adj./@專賣的;
 prosecution ,/n./@迫害;
 prospective ,/adj./@未来的;
 protagonist ,/n./@主角;,/n./@主人公;,/n./@主要参与者;
@@ -394,6 +396,7 @@ spermatozoa ,/n./@精子;
 spontaneity ,/n./@自发性;
 spontaneous ,/adj./@自然的;,/adj./@天真率直的;,/adj./@自发的;
 standardize ,/v./@標準化;
+stereoscope ,/n./@體視鏡;,/n./@立體鏡;
 stimulation ,/n./@刺激;,/n./@激励;
 stomachache ,/n./@胃痛;
 subdivision ,/n./@细分;,/n./@再分;
@@ -422,6 +425,7 @@ terminology ,/n./@术语;,/n./@术语学;
 tetrahedron ,/n./@四面體;
 theological ,/adj./@神學的;,/adj./@神學上的;
 theoretical ,/adj./@理論的;
+therapeutic ,/adj./@治療的;,/adj./@治療學的;,/adj./@有益於健康的;
 thermometer ,/n./@溫度計;
 thesauruses ,/redirected./@target="thesaurus";
 thunderbolt ,/n./@霹靂;,/n./@雷電;
