--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -223,11 +223,13 @@ simultaneous ,/adj./@同时的;
 sledgehammer ,/n./@大錘;
 sophisticate ,/v./@复杂化;
 sporadically ,/adv./@零星地;,/adv./@偶發的;
+stereoscopic ,/adj./@立體的;,/adj./@有立體感的;,/adj./@立體成像的;,/adj./@體視的;
 subscription ,/n./@订阅;
 substitution ,/n./@代替;,/n./@置换;
 subterranean ,/adj./@地下的;,/adj./@秘密的;
 superstition ,/n./@迷信;
 surprisingly ,/adv./@令人惊讶的;
+surrealistic ,/adj./@超現實主義的;
 surroundings ,/n./@周遭;
 surveillance ,/n./@监视;
 suspiciously ,/adv./@怀疑地;
