--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -27,6 +27,7 @@ multiplication ,/n./@乘法;,/n./@增加;
 orthographical ,/redirected./@target="orthographic";
 pharmaceutical ,/adj./@制药的;,/adj./@制药学的;
 philanthropist ,/n./@慈善家;,/n./@博愛主義者;
+proprioception ,/n./@本體感受;
 quintessential ,/adj./@精髓的;,/adj./@精粹的;
 recommendation ,/n./@推荐;,/n./@建议;
 reconciliation ,/n./@和解;,/n./@调和;,/n./@调停;,/n./@和谐;
