--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -1081,6 +1081,7 @@ veer ,/vi./@轉向;,/vi./@改變方向;,/vi./@改變航向;
 veil ,/n./@面紗;,/n./@面罩;,/v./@遮蔽;,/v./@掩飾;
 vein ,/n./@靜脈;,/n./@血管;,/n./@礦脈;,/n./@紋理;,/n./@格調;,/n./@脈絡;
 vend ,/v./@出售;,/v./@售賣;
+vent ,/n./@出口;,/n./@通風孔;,/n./@排氣孔;,/n./@火山口;,/n./@漏孔;,/vt./@排放;,/vt./@發洩;
 verb ,/n./@動詞;
 very ,/adv./@非常;
 vest ,/n./@背心;,/n./@馬甲;,/n./@汗衫;,/vt./@裝束;,/vt./@授予;
