--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -881,7 +881,7 @@ plush ,/n./@長毛絨;,/n./@厚絨布;,/adj./@长毛绒的;,/adj./@豪華的;,/a
 Pluto ,/n./@冥王星;,/n./@冥王;
 poach ,/vt./@偷獵;,/vt./@偷捕;
 point ,/v./@指出;
-poise ,/v./@平衡;,/n./@平衡;
+poise ,/v./@平衡;,/n./@平衡;,/n./@鎮定;,/n./@懸停;
 poker ,/n./@撲克;
 polar ,/adj./@極的;
 porch ,/n./@門廊;
@@ -894,6 +894,7 @@ prank ,/n./@惡作劇;
 prawn ,/n./@對蝦;,/n./@明蝦;,/v./@捕蝦;
 press ,/v./@壓;,/v./@催促;,/v./@逼迫;,/n./@出版社;
 prick ,/v./@刺;,/v./@竪起;,/n./@陰莖;
+pricy ,/redirected./@target="pricey";
 pride ,/n./@驕傲;
 prime ,/adj./@首要的;,/adj./@第一的;
 print ,/v./@打印;
@@ -1160,7 +1161,7 @@ stain ,/n./@汙點;
 stake ,/n./@柱;,/n./@賭註;,/n./@樁;,/n./@火刑柱;,/n./@利害關係;,/n./@風險;
 stale ,/adj./@陳舊的;
 stall ,/v./@拖延;,/n./@貨攤;,/n./@畜欄;,/n./@馬廄;,/n./@小隔间;,/n./@失速;,/n./@熄火;,/n./@车位;,/v./@熄火;,/v./@失速;
-stamp ,/n./@郵票;
+stamp ,/n./@郵票;,/n./@印花;,/n./@圖章;,/n./@印戳;,/vt./@蓋章於;,/vt./@印戳於;,/vt./@貼郵票於;,/vt./@貼印花於;
 stand ,/v./@站立;,/v./@忍受;,/v./@坐落;
 stare ,/v./@盯;
 stark ,/adj./@荒涼的;,/adj./@鲜明的;,/adj./@明顯的;,/adj./@赤裸裸的;,/adj./@僵硬的;,/adj./@严酷的;,/adj./@刻板的;
