--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -672,6 +672,7 @@ hamlet ,/n./@小村莊;
 hammer ,/n./@錘子;,/v./@錘擊;
 handle ,/n./@把手;,/v./@處理;,/v./@操作;
 happen ,/v./@发生;
+haptic ,/adj./@觸覺的;
 harass ,/v./@騷擾;,/v./@煩擾;
 harlot ,/n./@娼妓;
 harrow ,/n./@耙;,/vt./@耙;,/vt./@煩擾;,/vt./@折磨;
@@ -975,7 +976,7 @@ odious ,/adj./@可憎的;
 offend ,/vt./@冒犯;
 office ,/n./@辦公室;
 online ,/adj./@在綫;
-opaque ,/adj./@不透明的;
+opaque ,/adj./@不透明的;,/adj./@不透光的;,/adj./@難理解的;,/n./@不透明體;
 opiate ,/adj./@含鴉片的;,/adj./@麻醉的;,/n./@麻醉劑;
 oppose ,/v./@反對;
 option ,/n./@選項;
@@ -1080,6 +1081,7 @@ prance ,/v./@騰躍;
 preach ,/v./@佈道;
 prefix ,/n./@前綴;,/v./@加前綴;
 pretty ,/adv./@很;,/adj./@漂亮的;
+pricey ,/adj./@昂贵的;,/adj./@高價的;,/adj./@貴的;
 primal ,/adj./@原始的;
 primly ,/adv./@拘謹地;
 prison ,/n./@監獄;
@@ -1396,7 +1398,7 @@ static ,/adj./@靜態的;
 statue ,/n./@雕像;
 steady ,/adj./@平穩的;,/adj./@穩健的;
 stench ,/n./@惡臭;
-stereo ,/n./@立體聲;
+stereo ,/n./@立體聲;,/n./@立體音響裝置;,/adj./@立體聲的;,/adj./@立體音響的;
 sticky ,/adj./@棘手的;,/adj./@黏的;,/adj./@黏糊糊的;,/adj./@濕熱的;,/adj./@悶熱的;
 stifle ,/v./@扼殺;,/v./@窒息;,/v./@藏匿;,/vt./@悶死;,/vt./@抑止;,/vt./@阻止;
 stigma ,/n./@恥辱;,/n./@污名;,/n./@污點;,/n./@柱頭;,/n./@眼點;
