--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -635,6 +635,7 @@ Geordie ,/n./@喬迪;,/n./@泰恩賽德方言;,/n./@新堡方言;,/n./@紐卡索
 germane ,/adj./@適用的;
 gesture ,/n./@手勢;
 ghastly ,/adj./@可怕的;,/adj./@恐怖的;
+gimmick ,/n./@花招;,/n./@噱頭;,/n./@把戲;,/n./@機巧;,/n./@竅門;,/n./@詭計;
 giraffe ,/n./@長頸鹿;
 gladius ,/n./@短劍;
 glamour ,/n./@魅力;,/n./@迷惑;
@@ -1025,7 +1026,7 @@ portent ,/n./@前兆;,/n./@徵兆;,/n./@預兆;
 portion ,/n./@分配;
 portray ,/vt./@畫;,/vt./@描繪;,/vt./@描寫;,/vt./@扮演;,/vt./@描述;,/vt./@塑造;
 possess ,/v./@擁有;,/v./@佔有;
-postage ,/n./@郵資;
+postage ,/n./@郵資;,/n./@郵費;
 postfix ,/n./@后綴;
 posture ,/n./@姿勢;
 pottery ,/n./@瓷器;
@@ -1413,6 +1414,7 @@ twinkle ,/v./@閃耀;,/v./@眨眼;
 twitter ,/n./@推特;
 typical ,/adj./@典型的;
 Ukraine ,/n./@烏克蘭;
+uncanny ,/adj./@怪異的;,/adj./@奇怪的;,/adj./@不尋常的;,/adj./@不可思議的;,/adj./@神奇的;
 undergo ,/v./@經歷;,/v./@經受;
 unequal ,/n./@不平等的;
 unhinge ,/v./@(使)精神错乱;,/v./@(使)精神失常;
