--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -536,6 +536,7 @@ generous ,/adj./@慷慨的;
 genitive ,/adj./@所有格的;,/n./@所有格;,/adj./@屬格的;,/n./@屬格;
 genocide ,/n./@種族滅絕;,/n./@種族屠殺;
 geometry ,/n./@幾何學;
+gimmicky ,/adj./@耍花招的;,/adj./@華而不實的;,/adj./@作噱頭的;
 glorious ,/adj./@壮丽的;,/adj./@光荣的;
 glossary ,/n./@詞匯表;,/n./@術語表;
 gluttony ,/n./@暴食;,/n./@貪食;
@@ -577,7 +578,7 @@ highborn ,/adj./@出身名門的;
 historic ,/adj./@有历史意义的;
 hitherto ,/adv./@迄今;
 holistic ,/adj./@整體的;,/adj./@全盤的;
-hologram ,/n./@全息圖;,/n./@全息攝影;,/n./@全息照相;
+hologram ,/n./@全息圖;,/n./@全息攝影;,/n./@全息照相;,/n./@全息照片;,/n./@立體投影;
 homeland ,/n./@祖國;,/n./@故鄉;
 homework ,/n./@家庭作业;
 homicide ,/n./@殺人罪;,/n./@殺人;,/n./@殺人犯;
@@ -905,6 +906,7 @@ pleasure ,/n./@快乐;
 poignant ,/adj./@酸楚的;,/adj./@辛酸的;,/adj./@悲惨的;
 polarity ,/n./@極性;
 polaroid ,/n./@偏光板;,/n./@偏振片;
+polished ,/adj./@擦亮的;,/adj./@抛光的;,/adj./@優美的;,/adj./@娴熟的;,/adj./@优雅的;,/adj./@精煉的;,/adj./@磨光的;,/adj./@有光澤的;,/adj./@老於世故的;,/adj./@圓滑的;
 politics ,/n./@政治;
 polyglot ,/n./@精通數種語言的人;,/adj./@用數種語言的;
 polymath ,/adj./@博學的;,/n./@博學家;
