--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -96,6 +96,7 @@ beneficial
 benevolent
 binoculars
 biological
+biometrics
 bitterness
 blacksmith
 bloodstain
@@ -429,6 +430,7 @@ invincible
 invitation
 invocation
 ionization
+iridescent
 irrational
 irreverent
 irritating
@@ -472,6 +474,7 @@ mercantile
 metallurgy
 methodical
 meticulous
+microphone
 microscope
 millennium
 millilitre
@@ -538,6 +541,7 @@ percentile
 perception
 perfection
 periodical
+peripheral
 permafrost
 permanence
 permission
@@ -758,6 +762,7 @@ vindictive
 visionally
 vocabulary
 volleyball
+volumetric
 vulnerable
 washington
 watercress
