--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -34,12 +34,14 @@ attribution
 avoirdupois
 bellybutton
 benediction
+biometrical
 blockbuster
 blogosphere
 bourgeoisie
 braggadocio
 bureaucracy
 calculation
+calibration
 carnivorous
 categorical
 celebration
@@ -394,6 +396,7 @@ spermatozoa
 spontaneity
 spontaneous
 standardize
+stereoscope
 stimulation
 stomachache
 subdivision
@@ -422,6 +425,7 @@ terminology
 tetrahedron
 theological
 theoretical
+therapeutic
 thermometer
 thesauruses
 thunderbolt
