--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -672,6 +672,7 @@ hamlet
 hammer
 handle
 happen
+haptic
 harass
 harlot
 harrow
@@ -1080,6 +1081,7 @@ prance
 preach
 prefix
 pretty
+pricey
 primal
 primly
 prison
