--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -635,6 +635,7 @@ Geordie
 germane
 gesture
 ghastly
+gimmick
 giraffe
 gladius
 glamour
@@ -1413,6 +1414,7 @@ twinkle
 twitter
 typical
 Ukraine
+uncanny
 undergo
 unequal
 unhinge
