--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -536,6 +536,7 @@ generous
 genitive
 genocide
 geometry
+gimmicky
 glorious
 glossary
 gluttony
@@ -905,6 +906,7 @@ pleasure
 poignant
 polarity
 polaroid
+polished
 politics
 polyglot
 polymath
