--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -127,6 +127,7 @@ bilateral
 billboard
 bimonthly
 biography
+biometric
 blacklist
 blueprint
 bluetooth
@@ -744,6 +745,7 @@ penetrate
 peninsula
 pentagram
 perimeter
+periphery
 permanent
 perpetual
 persecute
@@ -922,6 +924,7 @@ severance
 sexuality
 shamanism
 sharpener
+sharpness
 shootdown
 shouldn't
 signature
