--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -223,11 +223,13 @@ simultaneous
 sledgehammer
 sophisticate
 sporadically
+stereoscopic
 subscription
 substitution
 subterranean
 superstition
 surprisingly
+surrealistic
 surroundings
 surveillance
 suspiciously
