--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -681,6 +681,7 @@ level ,/n./@水平;,/n./@級別;
 lever ,/n./@槓桿;
 libra ,/n./羅馬@磅;,/n./@里拉;
 Libra ,/n./@天秤座;,/n./@天秤宮;
+lidar ,/n./@激光雷達;
 light ,/n./@光;,/adj./@輕的;
 liken ,/v./@比拟;,/v./@比作;
 lilac ,/n./@丁香;,/adj./@淡紫色的;
@@ -1190,6 +1191,7 @@ storm ,/n./@風暴;
 story ,/n./@故事;
 stove ,/n./@爐子;,/n./@火爐;
 strap ,/v./@捆紥;,/n./@皮帶;
+stray ,/adj./@迷路的;,/adj./@流浪的;,/adj./@零星的;,/n./@迷路者;,/n./@流浪者;,/n./@走失的家畜;,/vi./@迷路;,/vi./@走失;,/vi./@走散;,/vi./@閒逛;,/vi./@流浪;,/vi./@離題;,/vi./@偏離;,/vi./@誤入歧途;
 strip ,/v./@剝奪;,/vt./@脱掉;,/vt./@脱光;,/n./@条;,/n./@狭长地带;,/n./@队服;,/n./@脱衣舞;,/vt./@除去;
 strop ,/v./@磨;
 stuck ,/v./@被卡住;
