--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -751,6 +751,7 @@ insert ,/v./@插入;
 inside ,/prep./在...@內;
 insist ,/v./@堅持;
 instil ,/vt./@滴注;,/vt./@逐漸灌輸;
+insula ,/n./@島;
 insult ,/v./@侮辱;
 insure ,/v./@確保;
 intact ,/adj./@完整的;
@@ -818,6 +819,7 @@ liable ,/adj./@有責任的;
 lichen ,/n./@地衣;,/n./@青苔;
 likely ,/adj./@有可能的;
 linear ,/adj./@線性的;,/adj./@線狀的;
+lineup ,/n./@陣容;,/n./@列隊;,/n./@隊列;,/n./@排隊;
 linger ,/v./@徘徊;,/v./@逗留;,/v./@拖延;,/vi./@留存;
 lining ,/n./@夾裡;,/n./@襯裡;
 liquid ,/adj./@液態的;,/n./@液體;
@@ -1037,6 +1039,7 @@ permit ,/v./@允許;
 person ,/n./@人;
 pestle ,/n./@杵;,/vt./@搗;,/vt./@研碎;,/n./@碾槌;
 petrol ,/n./@汽油;
+phobia ,/n./@恐懼症;,/n./@懼怕;
 phrase ,/n./@短語;
 phylum ,/n./@門;,/n./@語係;
 piazza ,/n./@廣場;
@@ -1306,7 +1309,7 @@ shriek ,/v./@尖叫;
 shrill ,/adj./@尖銳刺耳的;
 shrimp ,/n./@蝦;
 shrine ,/n./@神殿;,/n./@聖地;,/n./@神龕;
-shrink ,/v./@收縮;,/v./@畏縮;,/n./@心理醫生;
+shrink ,/v./@收縮;,/v./@畏縮;,/n./@心理醫生;,/vi./@退縮;,/vi./@縮小;
 shroom ,/n./@蘑菇;
 shroud ,/v./@覆蓋;,/v./@遮蔽;,/n./@覆蓋物;,/n./@壽衣;,/n./@裹尸布;
 Sicily ,/n./@西西里島;
@@ -1439,7 +1442,7 @@ sunder ,/v./@切開;,/v./@切斷;,/v./@分離;
 superb ,/adj./@極好的;,/adj./@一流的;,/adj./@華麗的;
 supine ,/adj./@仰臥的;,/adj./@懶散的;,/adj./@仰向的;
 supply ,/v./@供應;,/v./@供給;
-survey ,/v./@調查;
+survey ,/v./@調查;,/n./@調查;,/n./@概論;,/n./@概觀;,/n./@測量;,/n./@勘測;,/vt./@概括論述;,/vt./@測量;,/vt./@勘測;,/vt./@測繪;,/vt./@檢視;,/n./@俯瞰;,/vt./@俯瞰;,/n./@檢視;,/n./@測繪;
 suture ,/n./@縫合;,/n./@縫合處;
 swanky ,/adj./@炫耀的;
 swathe ,/n./@帶子;,/v./@綁;
