--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1005,7 +1005,7 @@ placard ,/n./@標語牌;,/n./@海報;,/v./@張貼;,/n./@招貼;
 placate ,/v./@撫慰;,/v./@懷柔;,/v./@和解;
 placebo ,/n./@安慰剂;,/n./@晚祷词;
 plastic ,/adj./@可塑的;,/adj./@塑料的;,/adj./@塑造的;,/n./@塑料;
-plateau ,/n./@髙原;,/n./@髙地;
+plateau ,/n./@髙原;,/n./@髙地;,/n./@穩定期;,/n./@停滯期;,/n./@穩定狀態;,/n./@停滯狀態;,/vi./@穩定;,/vi./@停滯;
 platoon ,/n./@排;,/n./@群;,/n./@組;
 pleural ,/adj./@肋膜的;,/adj./@胸膜的;
 plosive ,/n./@爆破音;,/adj./@爆破音的;,/n./@破裂音;,/adj./@破裂音的;
@@ -1271,7 +1271,7 @@ souffle ,/n./@蛋奶酥;
 soybean ,/n./@大豆;,/n./@黃豆;
 sparkle ,/v./@發火花;,/v./@閃耀;
 sparrow ,/n./@麻雀;
-spatial ,/adj./@空間的;
+spatial ,/adj./@空間的;,/adj./@空間性的;
 spatula ,/n./@小鏟;
 spawner ,/n./@產卵雌魚;
 special ,/adj./@特殊的;
