--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -45,6 +45,7 @@ allocated ,/adj./@分配的;
 allowance ,/n./@津贴;
 alongside ,/prep./@在旁边;,/adv./@在旁边;
 alternate ,/v./@交替;
+aluminium ,/n./@鋁;
 amazement ,/n./@驚奇;,/n./@詫異;
 ambiguity ,/n./@歧義;,/n./@意義不明;,/n./@模稜兩可;
 ambiguous ,/adj./@不確定的;,/adj./@模棱兩可的;
@@ -190,6 +191,7 @@ circuitry ,/n./@电路;,/n./@电路系统;,/n./@电路装置;,/n./@电路元件;
 circulate ,/v./@循环;
 classical ,/adj./@經典的;,/adj./@古典的;
 classmate ,/n./@同学;
+claustrum ,/n./@屏狀體;
 clearance ,/n./@清除;
 clientele ,/n./@顾客;,/n./@客户;
 clipboard ,/n./@剪切板;
@@ -376,6 +378,7 @@ emergency ,/n./@紧急情况;
 emphasize ,/v./@強調;,/v./@著重;
 empirical ,/adj./@經驗的;,/adj./@實證的;
 empitical ,/adj./@经验主义的;
+enclosure ,/n./@圈地;,/n./@圍場;,/n./@圈圍;,/n./@圍住;,/n./@圍欄;,/n./@圍牆;,/n./@附件;
 encounter ,/v./@遇到;
 encourage ,/v./@鼓励;
 endeavour ,/v./@努力;
@@ -885,6 +888,7 @@ resultant ,/adj./@結果的;
 resurrect ,/v./@复活;,/v./@使复活;
 retaliate ,/v./@報復;
 retribute ,/v./@报应;
+revulsion ,/n./@厭惡;,/n./@憎惡;,/n./@嫌惡;,/n./@反感;
 rheumatic ,/adj./@风湿病的;,/adj./@患风湿病的;
 righteous ,/adj./@正义的;
 sacrament ,/n./@聖禮;,/n./@聖典;,/n./@聖餐;,/n./@聖物;
