--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -77,6 +77,7 @@ international ,/adj./@国际的;
 interpolation ,/n./@插入;,/n./@篡改;,/n./@填寫;,/n./@插话;,/n./@插補;
 interrogation ,/n./@讯问;,/n./@审问;
 introspection ,/n./@自省;,/n./@内省;
+intuitiveness ,/n./@直觀性;
 inventiveness ,/n./@創造力;
 investigation ,/n./@调查;
 justification ,/n./@正当性;
