--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -5,6 +5,7 @@ authentication ,/n./@證明;,/n./@鑑定;,/n./@證實;
 characteristic ,/n./@特徵;,/n./@特性;
 circumvolution ,/n./@盤繞;,/n./@旋轉;
 classification ,/n./@分类;
+claustrophobia ,/n./@幽閉恐懼症;,/n./@幽閉恐怖症;
 congratulation ,/n./@祝贺;
 craniocerebral ,/adj./@顱腦的;
 disappointedly ,/adv./@失望的;
