--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -681,6 +681,7 @@ level
 lever
 libra
 Libra
+lidar
 light
 liken
 lilac
@@ -1190,6 +1191,7 @@ storm
 story
 stove
 strap
+stray
 strip
 strop
 stuck
