--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -751,6 +751,7 @@ insert
 inside
 insist
 instil
+insula
 insult
 insure
 intact
@@ -818,6 +819,7 @@ liable
 lichen
 likely
 linear
+lineup
 linger
 lining
 liquid
@@ -1037,6 +1039,7 @@ permit
 person
 pestle
 petrol
+phobia
 phrase
 phylum
 piazza
