--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -50,6 +50,7 @@ allotted
 alphabet
 altitude
 altruism
+aluminum
 alveolar
 alveolus
 ambition
@@ -860,6 +861,7 @@ paganism
 painting
 Paladins
 palpable
+panorama
 pantheon
 parabola
 paradigm
@@ -900,6 +902,7 @@ pharmacy
 phonemic
 phonetic
 physique
+pinnacle
 platform
 pleasant
 pleasure
@@ -1125,6 +1128,7 @@ stranger
 strangle
 strategy
 strength
+striatum
 striking
 stripper
 struggle
@@ -1172,6 +1176,7 @@ telomere
 template
 temporal
 tendency
+tenement
 terminal
 terrible
 terrific
