--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -45,6 +45,7 @@ allocated
 allowance
 alongside
 alternate
+aluminium
 amazement
 ambiguity
 ambiguous
@@ -190,6 +191,7 @@ circuitry
 circulate
 classical
 classmate
+claustrum
 clearance
 clientele
 clipboard
@@ -376,6 +378,7 @@ emergency
 emphasize
 empirical
 empitical
+enclosure
 encounter
 encourage
 endeavour
@@ -885,6 +888,7 @@ resultant
 resurrect
 retaliate
 retribute
+revulsion
 rheumatic
 righteous
 sacrament
