--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -142,7 +142,7 @@ colloquium ,/n./@學術研討會;,/n./@討論會;,/n./@學術報告會;
 coloration ,/n./@色彩;,/n./@著色;,/n./@上色;,/n./@染色;
 commandeer ,/v./@徵用;,/v./@霸占;,/v./@沒收;,/v./@強取;
 commentary ,/n./@实况报导;
-commercial ,/adj./@商業的;,/adj./@商務的;
+commercial ,/adj./@商業的;,/adj./@商務的;,/adj./@營利性的;,/adj./@商業性的;
 comminuted ,/adj./@粉碎性的;,/adj./@粉碎的;
 commission ,/n./@委员会;,/n./@委任;
 commonweal ,/n./@公益;,/n./@公共事业;,/n./@共和国;
@@ -163,6 +163,7 @@ compliment ,/n./@恭维;
 comprehend ,/v./@理解;,/v./@领悟;
 compromise ,/v./@妥协;
 conception ,/n./@概念;,/n./@设想;,/n./@怀孕;,/n./@構想;
+conceptual ,/adj./@概念的;,/adj./@觀念的;,/adj./@概念性的;,/adj./@概念上的;,/adj./@構思的;,/adj./@觀念上的;
 concession ,/n./@讓步;,/n./@退位;,/n./@減免;,/n./@特許;,/n./@租界;
 conclusion ,/n./@结论;,/n./@推论;
 conclusive ,/adj./@结束的;,/adj./@结论性的;,/adj./@确凿的;
@@ -325,6 +326,7 @@ familyname ,/n./@姓;
 fatalistic ,/adj./@宿命论的;
 federation ,/n./@聯邦;,/n./@聯合;,/n./@聯盟;,/n./@聯邦政府;
 fellowship ,/n./@团契;,/n./@组织;,/n./@友谊;
+figurative ,/adj./@比喻的;,/adj./@象徵性的;,/adj./@具象的;
 filibuster ,/n./@海盜;,/n./@阻撓;,/v./@阻礙;,/v./@掠奪;
 flabbiness ,/n./@軟弱;
 flintstone ,/n./@燧石;,/n./@打火石;
@@ -704,6 +706,7 @@ supersonic ,/adj./@超音速的;,/n./@超音速;
 supplement ,/v./@增補;,/v./@補充;,/n./@補充;
 supplicate ,/vt./@懇求;,/vt./@哀求;
 surrealism ,/n./@超現實主義;
+surrealist ,/n./@超現實主義者;,/adj./@超現實主義的;
 suspicious ,/adj./@怀疑的;
 synergetic ,/adj./@協同的;
 synonymous ,/adj./@同義的;,/adj./@同義詞的;
