--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -113,6 +113,8 @@ heterosexual ,/adj./@異性的;,/adj./@異性戀的;
 hieroglyphic ,/n./@象形文字;,/adj./@象形文字的;
 housewarming ,/n./@乔迁庆宴;
 humanitarian ,/n./@人道主義者;,/adj./@人道主義的;
+hyperrealism ,/n./@超級寫實主義;
+hyperreality ,/n./@超級寫實;
 hypochlorous ,/adj./@次氯化的;
 hypoglycemia ,/redirected./@target="hypoglycaemia";
 hypothetical ,/adj./@假设的;,/adj./@假言的;
@@ -160,6 +162,7 @@ marksmanship ,/n./@射擊術;,/n./@槍法;
 masturbation ,/n./@手淫;
 mechanically ,/adv./@机械的;
 metamorphose ,/vt./@變形;,/vt./[Geology]@變質;
+metaphorical ,/adj./@隱喻的;,/adj./@比喻的;
 metaphysical ,/adj./@形而上学的;,/adj./@超自然的;,/adj./@玄学的;,/adj./@抽象的;
 metropolitan ,/n./@大都市;
 misquotation ,/n./@误引;
@@ -187,6 +190,7 @@ periodically ,/adv./@阶段性的;
 perseverance ,/n./@坚持;
 perspiration ,/n./@流汗;
 perturbation ,/n./@攝動;,/n./@擾亂;,/n./@不安;
+photorealism ,/n./@照相寫實主義;,/n./@寫實主義;
 plausibility ,/n./@貌似合理;,/n./@貌似可信;,/n./@可信度;
 possiblility ,/n./@可能性;
 posthumously ,/adv./@死後地;,/adv./@在死後;
