--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -13,6 +13,7 @@ discrimination ,/n./@歧視;,/n./@辨別;,/n./@區別;
 dysproteinosis ,/n./@蛋白質缺乏症;
 ecclesiastical ,/adj./@教會的;,/adj./@教士的;
 gentrification ,/n./@中产阶级化;
+hyperrealistic ,/adj./@超級寫實主義的;
 hypoallergenic ,/adj./@低過敏性的;,/adj./@低過敏原的;,/adj./@不易致過敏的;
 identification ,/n./@鉴定;
 implementation ,/n./@实现;,/n./@实行;,/n./@执行;
@@ -28,6 +29,7 @@ multiplication ,/n./@乘法;,/n./@增加;
 orthographical ,/redirected./@target="orthographic";
 pharmaceutical ,/adj./@制药的;,/adj./@制药学的;
 philanthropist ,/n./@慈善家;,/n./@博愛主義者;
+photorealistic ,/adj./@逼真的;,/adj./@照相寫實主義的;
 proprioception ,/n./@本體感受;
 quintessential ,/adj./@精髓的;,/adj./@精粹的;
 recommendation ,/n./@推荐;,/n./@建议;
