--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -62,7 +62,7 @@ con ,/adj./@否@定;,/adj./@否@...的;,/adj./@反@...的;
 cop ,/n./@警察;
 cow ,/n./@牛;
 cry ,/v./@哭;,/v./@喊;
-cue ,/n./@提示;,/n./@綫索;
+cue ,/n./@提示;,/n./@綫索;,/vt./@暗示;,/n./@暗示;,/n./@提白;
 cup ,/n./@杯子;
 cut ,/v./@剪;
 dad ,/n./@父親;
