--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -105,6 +105,7 @@ aware ,/v./@知道;
 awash ,/adj./@被水覆蓋的;,/adj./@被浪潮沖打的;,/adj./@被海水沖刷的;
 awful ,/adj./@可怕的;,/adj./@可觀的;
 axial ,/adj./@軸的;,/adj./@軸向的;
+axiom ,/n./@公理;,/n./@原理;,/n./@原則;,/n./@自明之理;
 azure ,/adj./@蔚蓝的;,/adj./@碧蓝的;
 bacon ,/n./@鹹肉;,/n./@熏肉;
 badge ,/n./@徽章;,/n./@標記;
@@ -195,6 +196,7 @@ built ,/v./@建造@<build>;
 bulge ,/n./@腫脹;,/n./@凸塊;
 bully ,/v./@欺負;,/n./@惡霸;
 bunch ,/n./@束;
+burka ,/n./@布爾卡;,/n./@伊斯蘭婦女穿的長袍;
 burst ,/vi./@爆炸;
 bushy ,/adj./@濃密的;
 busty ,/adj./@大胸脯的;,/adj./@胸部豐滿的;
@@ -242,7 +244,7 @@ chirp ,/n./@吱喳聲;
 chive ,/n./@香蔥;
 choke ,/v./@噎;
 chump ,/n./@大肉片;,/n./@笨蛋;
-chunk ,/n./@大塊;
+chunk ,/n./@大塊;,/n./@厚塊;,/n./@大部分;
 churn ,/v./@攪拌;,/v./@攪動;
 cider ,/n./@蘋果酒;,/n./@蘋果汁;
 cigar ,/n./@雪茄;
@@ -759,6 +761,7 @@ moral ,/adj./@道德的;,/n./@教訓;
 moron ,/n./@傻子;,/n./@笨蛋;
 morph ,/n.v./@詞態;,/v./@改變;
 motel ,/n./@汽車旅館;
+motif ,/n./@主題;,/n./@基調;,/n./@主旨;,/n./@基本圖案;
 motto ,/n./@座右銘;,/n./@格言;
 mould ,/n./@霉菌;,/n./@模具;,/n./@型;,/v./@發霉;,/v./@澆鑄;
 mound ,/n./@堆;,/v./@堆起;
@@ -1037,7 +1040,7 @@ shack ,/n./@棚屋;
 shade ,/n./@樹蔭;,/n./@陰影;
 shaft ,/n./@豎井;,/n./@軸桿;,/n./@柄;,/v./@利用;,/n./@箭桿;,/n./@通風井;,/n./@升降機井;
 shake ,/v./@搖;,/v./@抖;
-shaky ,/adj./@搖晃的;
+shaky ,/adj./@搖晃的;,/adj./@顫抖的;,/adj./@不穩固的;,/adj./@發抖的;,/adj./@不可靠的;,/adj./@成問題的;
 shale ,/n./@頁岩;,/n./@泥板岩;
 shall ,/aux./@應該;
 shame ,/n./@羞恥;
@@ -1300,7 +1303,7 @@ trick ,/n./@詭計;,/n./@竅門;,/v./@欺詐;,/v./@哄騙;
 trite ,/adj./@平庸的;,/adj./@陳腐的;,/adj./@老生常谈的;
 troll ,/v./@輪唱;,/v./@拖餌釣魚;,/n./@輪唱;,/n./@拖餌釣魚;
 troop ,/n./@軍隊;
-trope ,/n./@轉義;,/n./@比喻;
+trope ,/n./@轉義;,/n./@比喻;,/n./@隱喻;,/n./@寓意;,/n./@說法;,/n./@修辭;,/n./@基調;,/n./@橋段;
 trout ,/n./@鱒魚;,/n./@鮭魚;,/n./@鱒魚肉;,/n./@鮭魚肉;,/n./@老傢伙;
 truck ,/n./@卡車;
 trump ,/n./@王牌;
