--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -237,6 +237,7 @@ candid ,/adj./@坦白的;,/adj./@直率的;
 cannon ,/n./@大炮;,/n./@加農炮;
 cannot ,/v./@不能;
 canopy ,/n./@天篷;,/n./@遮篷;,/n./@華蓋;,/v./@遮蓋;
+canvas ,/n./@帆布;,/n./@油畫布;,/n./@油畫;,/n./@風帆;,/n./@帳篷;,/adj./@帆布製的;,/vt./@用帆布覆蓋;
 canyon ,/n./@峽谷;
 capita ,/n./@人;
 carbon ,/n./@碳;
@@ -277,6 +278,7 @@ choice ,/n./@選擇;
 chorus ,/n./@合唱曲;
 chosen ,/v./@選擇;
 christ ,/n./@基督;
+chunky ,/adj./@厚實的;,/adj./@厚重的;,/adj./@粗重的;,/adj./@笨重的;
 church ,/n./@教堂;,/n./@教會;
 cinema ,/n./@電影院;
 cipher ,/n./@密碼;,/v./@計算;
@@ -560,6 +562,7 @@ fellow ,/n./@家夥;
 felony ,/n./@重罪;
 fervid ,/adj./@热情的;,/adj./@热烈的;,/adj./@强烈的;,/adj./@激情的;
 fervor ,/n./@狂熱;
+fetish ,/n./@迷戀;,/n./@戀物;,/n./@迷戀之物;,/n./@神物;
 fetter ,/v./@束縛;,/v./@加脚鐐;,/n./@束縛;,/n./@脚鐐;,/n./@羈絆;
 feudal ,/adj./@封建的;
 fiddle ,/n./@提琴;
