--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -366,6 +366,7 @@ custody ,/v./@保管;,/v./@監護;,/n./@监禁;,/n./@拘留;
 cutlery ,/n./@刀具;,/n./@餐具;,/n./@刀叉;,/n./@餐刀;
 cyanide ,/n./@氰化物;
 cyclone ,/n./@旋風;,/n./@氣旋;
+Cyclops ,/n./@獨眼巨人;
 cypress ,/n./@柏樹;
 darling ,/adj./@親愛的;
 dataset ,/n./@数据集;,/n./@资料集;,/n./@资料组;
@@ -1233,6 +1234,7 @@ shuffle ,/v./@洗牌;
 shutter ,/n./@快門;
 shuttle ,/n./@梭子;
 sibling ,/n./@兄弟姊妹;
+signage ,/n./@廣告標誌;,/n./@標誌;,/n./@標識;,/n./@標記;
 signore ,/n./@夫人;
 silence ,/n./@寂靜;
 silicon ,/n./@矽;
@@ -1421,7 +1423,7 @@ unhinge ,/v./@(使)精神错乱;,/v./@(使)精神失常;
 unicorn ,/n./@獨角獸;
 uniform ,/n./@制服;,/adj./@全部相同的;
 unknown ,/adj./@未知的;,/adj./@陌生的;,/n./@未知;,/n./@未知物;,/n./@未知數;
-unleash ,/v./@解放;
+unleash ,/v./@解放;,/vt./@釋放;,/vt./@宣洩;
 unlucky ,/adj./@不幸的;
 unravel ,/vt./@解開;,/vt./@澄清;
 upfront ,/adj./@預付的;,/adj./@在前面的;,/adj./@正直的;,/adj./@坦率的;,/adj./@显要的;
