--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -319,6 +319,7 @@ different ,/adj./@不同的;
 difficult ,/adj./@困难的;
 digestion ,/n./@消化;,/n./@领悟;
 dignified ,/adj./@尊贵的;,/adj./@庄重的;
+dignitary ,/n./@要人;,/n./@顯貴;
 diligence ,/n./@勤奮;,/n./@勤勉;
 dimension ,/n./@维度;,/n./@次元;
 diphthong ,/n./@雙元音;,/n./@二合元音;
@@ -476,6 +477,7 @@ frustrate ,/v./@打击;,/v./使@沮丧;,/v./使@受挫;
 fundament ,/n./@基礎;,/n./@臀部;,/n./@肛門;
 galvanize ,/v./@刺激;
 garrulous ,/adj./@嘮叨的;,/adj./@喋喋不休的;
+gazillion ,/n./@龐大的數字;,/n./@億萬;
 generally ,/adj./@通常的;,/adj./@一般的;
 gentleman ,/n./@绅士;
 geography ,/n./@地理學;,/n./@地形;,/n./@地勢;
@@ -519,6 +521,7 @@ humiliate ,/v./@羞辱;
 hurricane ,/n./@颶風;
 hydraulic ,/adj./@水力的;,/adj./@液压的;
 hyperbola ,/n./@雙曲線;
+hyperreal ,/adj./@超現實的;
 hypnotize ,/v./@吸引;
 hypocrisy ,/n./@虛僞;,/n./@僞善;
 hypomania ,/n./@輕度躁狂;
@@ -609,6 +612,7 @@ jellyfish ,/n./@水母;
 judgement ,/n./@判決;,/n./@意見;,/n./@判斷;
 judicious ,/adj./@明智的;
 katabatic ,/adj./@下降的;,/adj./@下吹的;
+kazillion ,/redirected./@target="gazillion";
 kilderkin ,/n./@基德爾欽;,/n./@小桶;,/n./@十六加侖的量;,/n./@十八加侖的量;,/n./@1/2桶的量;
 kinematic ,/adj./@运动学的;
 knowledge ,/n./@知识;
@@ -618,6 +622,7 @@ landscape ,/n./@风景;,/n./@风景画;,/n./@地形;
 Laurentia ,/n./@勞倫大陸;
 lawnmower ,/n./@割草機;
 legendary ,/adj./@傳說的;,/adj./@傳奇的;
+leitmotif ,/n./@主題;,/n./@主旨;,/n./@主旋律;,/n./@基調;
 leukaemia ,/n./@白血病;
 liability ,/n./@責任;
 lifestyle ,/n./@生活方式;
@@ -765,6 +770,7 @@ phonetics ,/n./@語音學;
 phonology ,/n./@音系學;,/n./@音系;,/n./@語音體系;
 physician ,/n./@内科醫生;
 phytology ,/n./@植物学;
+pictorial ,/adj./@繪畫的;,/adj./@形象化的;,/adj./@有插圖的;,/adj./@畫的;,/n./@畫報;,/n./@畫刊;
 pilferage ,/n./@偷竊;
 pineapple ,/n./@菠萝;
 plainsman ,/n./@平原居民;
@@ -853,6 +859,7 @@ recommend ,/v./@推荐;
 reconcile ,/v./@和解;,/v./@调停;
 rectangle ,/n./@矩形;,/n./@长方形;
 recumbent ,/adj./@斜倚的;,/adj./@休息的;
+recurrent ,/adj./@反復出現的;,/adj./@定期重複的;,/adj./@週期性的;,/adj./@一再發生的;
 recursive ,/adj./@遞歸的;
 redundant ,/adj./@多余的;
 reference ,/n./@参考;,/n./@推薦;,/n./@調用;
