--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -163,6 +163,7 @@ compliment
 comprehend
 compromise
 conception
+conceptual
 concession
 conclusion
 conclusive
@@ -325,6 +326,7 @@ familyname
 fatalistic
 federation
 fellowship
+figurative
 filibuster
 flabbiness
 flintstone
@@ -704,6 +706,7 @@ supersonic
 supplement
 supplicate
 surrealism
+surrealist
 suspicious
 synergetic
 synonymous
