--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -113,6 +113,8 @@ heterosexual
 hieroglyphic
 housewarming
 humanitarian
+hyperrealism
+hyperreality
 hypochlorous
 hypoglycemia
 hypothetical
@@ -160,6 +162,7 @@ marksmanship
 masturbation
 mechanically
 metamorphose
+metaphorical
 metaphysical
 metropolitan
 misquotation
@@ -187,6 +190,7 @@ periodically
 perseverance
 perspiration
 perturbation
+photorealism
 plausibility
 possiblility
 posthumously
