--- a/Files/lang/en/english14.csv
+++ b/Files/lang/en/english14.csv
@@ -13,6 +13,7 @@ discrimination
 dysproteinosis
 ecclesiastical
 gentrification
+hyperrealistic
 hypoallergenic
 identification
 implementation
@@ -28,6 +29,7 @@ multiplication
 orthographical
 pharmaceutical
 philanthropist
+photorealistic
 proprioception
 quintessential
 recommendation
