--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -105,6 +105,7 @@ aware
 awash
 awful
 axial
+axiom
 azure
 bacon
 badge
@@ -195,6 +196,7 @@ built
 bulge
 bully
 bunch
+burka
 burst
 bushy
 busty
@@ -759,6 +761,7 @@ moral
 moron
 morph
 motel
+motif
 motto
 mould
 mound
