--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -237,6 +237,7 @@ candid
 cannon
 cannot
 canopy
+canvas
 canyon
 capita
 carbon
@@ -277,6 +278,7 @@ choice
 chorus
 chosen
 christ
+chunky
 church
 cinema
 cipher
@@ -560,6 +562,7 @@ fellow
 felony
 fervid
 fervor
+fetish
 fetter
 feudal
 fiddle
