--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -366,6 +366,7 @@ custody
 cutlery
 cyanide
 cyclone
+Cyclops
 cypress
 darling
 dataset
@@ -1233,6 +1234,7 @@ shuffle
 shutter
 shuttle
 sibling
+signage
 signore
 silence
 silicon
