--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -319,6 +319,7 @@ different
 difficult
 digestion
 dignified
+dignitary
 diligence
 dimension
 diphthong
@@ -476,6 +477,7 @@ frustrate
 fundament
 galvanize
 garrulous
+gazillion
 generally
 gentleman
 geography
@@ -519,6 +521,7 @@ humiliate
 hurricane
 hydraulic
 hyperbola
+hyperreal
 hypnotize
 hypocrisy
 hypomania
@@ -609,6 +612,7 @@ jellyfish
 judgement
 judicious
 katabatic
+kazillion
 kilderkin
 kinematic
 knowledge
@@ -618,6 +622,7 @@ landscape
 Laurentia
 lawnmower
 legendary
+leitmotif
 leukaemia
 liability
 lifestyle
@@ -765,6 +770,7 @@ phonetics
 phonology
 physician
 phytology
+pictorial
 pilferage
 pineapple
 plainsman
@@ -853,6 +859,7 @@ recommend
 reconcile
 rectangle
 recumbent
+recurrent
 recursive
 redundant
 reference
