--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -742,7 +742,7 @@ meninges ,/n.//pl./@腦膜;
 merchant ,/n./@商人;
 merciful ,/adj./@仁慈的;
 merkabah ,/n./@梅爾卡巴;
-metaphor ,/n./@暗喻;,/n./@隱喻;
+metaphor ,/n./@暗喻;,/n./@隱喻;,/n./@象徵;
 metatron ,/n./@梅塔特隆;
 midnight ,/n./@午夜;
 migraine ,/n./@偏頭痛;
