--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -710,6 +710,8 @@ surrealist ,/n./@超現實主義者;,/adj./@超現實主義的;
 suspicious ,/adj./@怀疑的;
 synergetic ,/adj./@協同的;
 synonymous ,/adj./@同義的;,/adj./@同義詞的;
+synthesize ,/vt./@合成;,/vt./@綜合;
+synthetize ,/redirected./@target="synthesize";
 systematic ,/adj./@系統的;,/adj./@有組織的;
 tabernacle ,/n./@帳篷;,/n./@聖體盒;
 technetium ,/n./@鎝;
