--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -976,7 +976,7 @@ right ,/adj./@對的;,/adj./@右邊的;
 rigid ,/adj./@嚴格的;,/adj./@死板的;,/adj./@堅硬的;,/adj./@嚴密的;
 rigor ,/n./@嚴肅;,/n./@严密;
 rinse ,/v./@漂洗;,/v./@沖洗;
-risky ,/adj./@冒險的;,/adj./@有風險的;
+risky ,/adj./@冒險的;,/adj./@有風險的;,/adj./@危險的;,/adj./@大膽的;,/adj./@有傷風化的;
 rival ,/n./@競爭;,/n./@對手;
 river ,/n./@河流;
 rivet ,/n./@鉚釘;,/vt./@鉚;,/vt./@鉚接;,/vt./@固定;
