--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -297,7 +297,7 @@ clinic ,/n./@診所;
 clique ,/n./@派係;
 clumsy ,/adj./@笨拙的;
 clutch ,/v./@抓緊;
-coarse ,/adj./@粗糙的;
+coarse ,/adj./@粗糙的;,/adj./@粗的;,/adj./@粗劣的;,/adj./@粗俗的;,/adj./@粗魯的;
 cocoon ,/n./@茧;,/n./@蚕茧;
 coerce ,/v./@強制;,/v./@迫使;,/vt./@强迫;
 coffee ,/n./@咖啡;
@@ -719,7 +719,7 @@ humble ,/adj./@謙卑的;
 humour ,/n./@幽默;,/n./@詼諧;,/vt./@遷就;
 hunger ,/n./@饑餓;
 hungry ,/adj./@饑餓的;
-hybrid ,/n./@雜種;,/adj./@混合的;,/adj./@雜交的;
+hybrid ,/n./@雜種;,/adj./@混合的;,/adj./@雜交的;,/n./@合成物;,/adj./@雜種的;,/adj./@混合而成的;,/adj./@混血的;
 hyper- ,/pref./@在上;,/pref./@超過;,/pref./@過度;
 ignite ,/v./@點燃;,/vi./@燃燒;
 ignore ,/v./@忽視;,/v./@忽略;
@@ -771,6 +771,7 @@ invoke ,/vt./@調用;,/vt./@祈求;,/vt./@援引;,/vt./@訴諸;,/vt./@喚起;,/v
 island ,/n./@島嶼;
 Israel ,/n./@以色列;
 jagger ,/n./@鑿子;,/n./@鋸齒;
+jargon ,/n./@行話;,/n./@黑話;,/n./@粗俗的言語;,/n./@混雜語;
 jigsaw ,/n./@線鋸;
 jocund ,/adj./@歡樂的;,/adj./@高興的;,/adj./@快活的;
 jostle ,/v./@推擠;
@@ -1027,6 +1028,7 @@ pastry ,/n./@酥皮糕點;
 patent ,/n./@專利;,/adj./@明顯的;
 patrol ,/n./@巡邏;,/n./@巡邏隊;,/n./@偵察隊;,/vi./@巡逻;
 patron ,/n./@贊助人;,/n./@主顧;
+patter ,/n./@行話;,/n./@連珠砲似的話;,/n./@饒舌;,/n./@喋喋不休;,/n./@啪嗒聲;,/vi./@啪嗒啪嗒地響;,/vi./@啪嗒啪嗒地走;,/vi./@啪嗒啪嗒地拍打;
 payoff ,/n./@贿赂;,/n./@遣散金;,/n./@收益;,/n./@回报;,/n./@结果;
 peanut ,/n./@花生;
 pebble ,/n./@卵石;
@@ -1224,6 +1226,7 @@ riddle ,/n./@字謎;,/n./@謎;,/n./@謎語;
 riffle ,/n./@淺灘;,/n./@急流;,/v./@翻閲;,/v./@洗牌;
 rights ,/n./@權利;
 rigour ,/n./@严酷;,/n./@严苛;,/n./@严谨;,/n./@严格;,/n./@缜密;
+risque ,/adj./@有傷風化的;
 robber ,/n./@強盜;
 Robert ,/n./@羅伯特;
 robust ,/adj./@健壯的;,/adj./@強壯的;
