--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -816,6 +816,7 @@ magenta ,/adj./@洋紅;,/n./@洋紅色;
 magical ,/adj./@魔術的;,/adj./@魔法般的;
 magnate ,/n./@巨頭;,/n./@要人;,/n./@富豪;,/n./@大資本家;
 magnify ,/v./@放大;,/v./@擴大;
+malaise ,/n./@不安;,/n./@抑鬱;,/n./@心神不寧;,/n./@不適;,/n./@萎靡;,/n./@不滿;
 malware ,/n./@惡意軟件;
 manager ,/n./@经理;,/n./@管理者;,/n./@管理员;
 mandate ,/v./@授權;
@@ -1166,6 +1167,7 @@ rhombus ,/n./@菱形;
 ribcage ,/n./@胸廓;
 rickety ,/adj./@搖晃的;,/adj./@虛弱的;
 riposte ,/v./@還擊;,/v./@回擊;,/n./@回擊;
+risqué ,/redirected./@target="risque";
 rivalry ,/n./@競爭;,/n./@對抗;
 rivulet ,/n./@小溪;
 roaming ,/v./@漫步;
