--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -623,6 +623,7 @@ incision ,/n./@切口;,/n./@切開;,/n./@切入;,/n./@切割;,/n./@雕刻;
 increase ,/v./@增加;
 incubate ,/v./@孵化;
 indebted ,/adj./@感激的;,/adj./@感恩的;
+indecent ,/adj./@下流的;,/adj./@淫穢的;,/adj./@猥褻的;,/adj./@粗鄙的;,/adj./@不適當的;,/adj./@不禮貌的;,/adj./@不像話的;
 indicate ,/v./@表明;,/v./@指示;
 indirect ,/n./@间接的;
 industry ,/n./@工业;
