--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -115,6 +115,7 @@ bacterium ,/n./@細菌;
 balaclava ,/n./@巴拉克拉瓦盔式帽;
 ballerina ,/n./@芭蕾舞女演員;
 ballistic ,/adj./@彈道的;
+barbarous ,/adj./@野蠻的;,/adj./@粗野的;,/adj./@殘暴的;,/adj./@未開化的;,/adj./@原始的;,/adj./@無文化的;,/adj./@粗鄙的;,/adj./@粗俗的;
 barometer ,/n./@气压计;
 barricade ,/n./@路障;,/n./@街壘;,/vt./@堵住;
 bartender ,/n./@酒保;
@@ -623,6 +624,7 @@ Laurentia ,/n./@勞倫大陸;
 lawnmower ,/n./@割草機;
 legendary ,/adj./@傳說的;,/adj./@傳奇的;
 leitmotif ,/n./@主題;,/n./@主旨;,/n./@主旋律;,/n./@基調;
+lethargic ,/adj./@瞌睡的;,/adj./@昏昏欲睡的;,/adj./@倦怠的;,/adj./@無精打采的;,/adj./@嗜睡的;
 leukaemia ,/n./@白血病;
 liability ,/n./@責任;
 lifestyle ,/n./@生活方式;
@@ -1046,6 +1048,7 @@ underwear ,/n./@内衣;
 universal ,/adj./@宇宙的;,/adj./@普遍的;
 unlimited ,/adj./@无限的;
 unnerving ,/adj./@令人氣餒的;
+unrefined ,/adj./@未提煉的;,/adj./@未精製的;,/adj./@粗俗的;,/adj./@不高尚的;,/adj./@无教养的;
 unscathed ,/adj./@未受傷的;
 unseeable ,/adj./@看不见的;
 untouched ,/adj./@不受影响的;
