--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -771,6 +771,7 @@ invoke
 island
 Israel
 jagger
+jargon
 jigsaw
 jocund
 jostle
@@ -1027,6 +1028,7 @@ pastry
 patent
 patrol
 patron
+patter
 payoff
 peanut
 pebble
@@ -1224,6 +1226,7 @@ riddle
 riffle
 rights
 rigour
+risque
 robber
 Robert
 robust
