--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -816,6 +816,7 @@ magenta
 magical
 magnate
 magnify
+malaise
 malware
 manager
 mandate
@@ -1166,6 +1167,7 @@ rhombus
 ribcage
 rickety
 riposte
+risqué
 rivalry
 rivulet
 roaming
