--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -115,6 +115,7 @@ bacterium
 balaclava
 ballerina
 ballistic
+barbarous
 barometer
 barricade
 bartender
@@ -623,6 +624,7 @@ Laurentia
 lawnmower
 legendary
 leitmotif
+lethargic
 leukaemia
 liability
 lifestyle
@@ -1046,6 +1048,7 @@ underwear
 universal
 unlimited
 unnerving
+unrefined
 unscathed
 unseeable
 untouched
